--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -20,22 +20,23 @@ activity <- read.csv(unz("activity.zip", "activity.csv"))
 steps<-activity %>% 
     group_by(date) %>%
     summarise(totalsteps = sum(steps,na.rm=TRUE))
-hist(steps$totalsteps, xlab="steps per day", main = "Frequency of steps per day")
+#hist(steps$totalsteps, xlab="steps per day", main = "Frequency of steps per day")
 
 print(summary(steps$totalsteps))
 ```
-
+![alt text](PA1_template_files\figure-html\unnamed-chunk-2-1.png)
 
 ## What is the average daily activity pattern?
 ```{r}
 pattern<-activity %>%
     group_by(interval) %>%
     summarise(average=mean(steps,na.rm=TRUE))
-plot(x=pattern$interval, y=pattern$average, type="l",
-     main="daily steps per 5 minute time interval", ylab="steps",xlab="time interval")
+#plot(x=pattern$interval, y=pattern$average, type="l",
+#     main="daily steps per 5 minute time interval", ylab="steps",xlab="time #interval")
 maxinterval<-which.max(pattern$average)
 print(pattern[maxinterval,])
 ```
+![alt text](PA1_template_files\figure-html\unnamed-chunk-3-1.png)
 
 ## Imputing missing values
 ```{r}
@@ -71,11 +72,11 @@ steps<-activity2 %>%
   group_by(date) %>%
   summarise(totalsteps = sum(steps,na.rm=TRUE))
 
-hist(steps$totalsteps, xlab="steps per day", main = "Frequency of steps per day \n NA's replaced")
+#hist(steps$totalsteps, xlab="steps per day", main = "Frequency of steps per day \n #NA's replaced")
 
 print(summary(steps$totalsteps))
 ```
-
+![alt text](PA1_template_files\figure-html\unnamed-chunk-4-1.png)
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ```{r}
@@ -108,9 +109,10 @@ patternweekend<-activity2 %>%
   group_by(interval) %>%
   summarise(average=mean(steps,na.rm=TRUE))
 
-par(mfrow=c(2,1)) 
-plot(patternweekday$interval, patternweekday$average,type="l",
-     xlab="interval", ylab="Number of steps", main="Weekdays")
-plot(patternweekend$interval, patternweekend$average,type="l",
-     xlab="interval", ylab="Number of steps", main="Weekends")
+#par(mfrow=c(2,1)) 
+#plot(patternweekday$interval, patternweekday$average,type="l",
+#     xlab="interval", ylab="Number of steps", main="Weekdays")
+#plot(patternweekend$interval, patternweekend$average,type="l",
+#     xlab="interval", ylab="Number of steps", main="Weekends")
 ```
+![alt text](PA1_template_files\figure-html\unnamed-chunk-5-1.png)
