--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -24,7 +24,7 @@ steps<-activity %>%
 
 print(summary(steps$totalsteps))
 ```
-![alt text](PA1_template_files\figure-html\unnamed-chunk-2-1.png)
+![alt text](./PA1_template_files/figure-html/unnamed-chunk-2-1.png)
 
 ## What is the average daily activity pattern?
 ```{r}
@@ -36,7 +36,7 @@ pattern<-activity %>%
 maxinterval<-which.max(pattern$average)
 print(pattern[maxinterval,])
 ```
-![alt text](PA1_template_files\figure-html\unnamed-chunk-3-1.png)
+![alt text](./PA1_template_files/figure-html/unnamed-chunk-3-1.png)
 
 ## Imputing missing values
 ```{r}
@@ -76,7 +76,7 @@ steps<-activity2 %>%
 
 print(summary(steps$totalsteps))
 ```
-![alt text](PA1_template_files\figure-html\unnamed-chunk-4-1.png)
+![alt text](./PA1_template_files/figure-html/unnamed-chunk-4-1.png)
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ```{r}
@@ -115,4 +115,4 @@ patternweekend<-activity2 %>%
 #plot(patternweekend$interval, patternweekend$average,type="l",
 #     xlab="interval", ylab="Number of steps", main="Weekends")
 ```
-![alt text](PA1_template_files\figure-html\unnamed-chunk-5-1.png)
+![alt text](./PA1_template_files/figure-html/unnamed-chunk-5-1.png)
